kubernetes-manifests/cloudflared-final.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"cloudflared-tunnel"},"name":"cloudflared-tunnel","namespace":"akash-services"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"cloudflared-tunnel"}},"template":{"metadata":{"labels":{"app":"cloudflared-tunnel"}},"spec":{"containers":[{"args":["tunnel","--config","/etc/cloudflared/config.yml","run"],"command":["cloudflared"],"image":"cloudflare/cloudflared:2024.8.2","livenessProbe":{"httpGet":{" [...]
  creationTimestamp: "2026-03-18T06:23:03Z"
  generation: 7
  labels:
    app: cloudflared-tunnel
  name: cloudflared-tunnel
  namespace: akash-services
  resourceVersion: "655065"
  uid: 99ee558b-0645-4e5f-bd4e-f0ab75bebeca
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cloudflared-tunnel
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-03-18T01:26:21-05:00"
      labels:
        app: cloudflared-tunnel
    spec:
      containers:
      - args:
        - tunnel
        - --config
        - /etc/cloudflared/config.yml
        - run
        - --no-autoupdate
        command:
        - cloudflared
        image: cloudflare/cloudflared:2026.3.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: 20241
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        name: cloudflared
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: 20241
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/cloudflared
          name: config
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        projected:
          defaultMode: 420
          sources:
          - configMap:
              name: cloudflared-final-config
          - secret:
              items:
              - key: credentials.json
                path: credentials.json
              name: cloudflared-final-credentials
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-03-18T06:28:19Z"
    lastUpdateTime: "2026-03-18T06:28:19Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-03-18T06:23:03Z"
    lastUpdateTime: "2026-03-18T06:28:20Z"
    message: ReplicaSet "cloudflared-tunnel-66dfbcd887" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 7
  readyReplicas: 1
  replicas: 2
  terminatingReplicas: 0
  unavailableReplicas: 1
  updatedReplicas: 1
